--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "haochuan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.12.4",
     "events": "^1.0.2",
     "express": "^4.12.3",
     "flux": "^2.0.3",
