--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "events": "^1.0.2",
     "express": "^4.12.3",
     "flux": "^2.0.3",
+    "keymirror": "^0.1.1",
     "object-assign": "^2.0.0",
     "react": "^0.13.3"
   },
