--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "body-parser": "^1.12.4",
     "events": "^1.0.2",
     "express": "^4.12.3",
+    "gulp-uglify": "^1.4.2",
     "keymirror": "^0.1.1",
     "nuclear-js": "^1.1.1",
     "object-assign": "^2.0.0",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "vinyl-buffer": "^1.0.0"
   },
   "devDependencies": {
     "browserify": "^9.0.8",
@@ -25,7 +27,6 @@
     "gulp-html-replace": "^1.4.4",
     "gulp-react": "^3.0.1",
     "gulp-streamify": "0.0.5",
-    "gulp-uglify": "^1.1.0",
     "reactify": "^1.1.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.1.0"
