--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "babelify": "^6.1.3",
     "body-parser": "^1.12.4",
+    "cors": "^2.7.1",
     "events": "^1.0.2",
     "express": "^4.12.3",
     "gulp-uglify": "^1.4.2",
     "keymirror": "^0.1.1",
+    "morgan": "^1.6.1",
+    "node-basicauth": "0.0.9",
     "nuclear-js": "^1.1.1",
     "object-assign": "^2.0.0",
     "react": "^0.13.3",
