--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "startreact",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "react start template",
   "main": "",
   "scripts": {
@@ -22,6 +22,8 @@
   "dependencies": {
     "bluebird": "^3.1.1",
     "commander": "^2.9.0",
-    "fs-extra": "^0.26.3"
+    "fs-extra": "^0.26.3",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6"
   }
 }
