--- a/template/package.json
+++ b/template/package.json
@@ -19,7 +19,18 @@
     "node-basicauth": "0.0.9"
   },
   "devDependencies": {
-    "babelify": "^6.1.3",
+    "babel-core": "^5.6.18",
+    "babel-loader": "^5.1.4",
+    "babel-plugin-react-transform": "^1.1.0",
+    "expect": "^1.6.0",
+    "express": "^4.13.3",
+    "jsdom": "^5.6.1",
+    "mocha": "^2.2.5",
+    "node-libs-browser": "^0.5.2",
+    "react-addons-test-utils": "^0.14.0",
+    "react-transform-hmr": "^1.0.0",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.2.0"
     "react": "^0.13.3",
     "webpack": "^2.0.5-beta"
   }
