--- a/template/package.json
+++ b/template/package.json
@@ -16,7 +16,10 @@
     "express-http-proxy": "^0.6.0",
     "keymirror": "^0.1.1",
     "morgan": "^1.6.1",
-    "node-basicauth": "0.0.9"
+    "node-basicauth": "0.0.9",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "redux": "^3.0.6"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
@@ -30,8 +33,7 @@
     "react-addons-test-utils": "^0.14.0",
     "react-transform-hmr": "^1.0.0",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0"
-    "react": "^0.13.3",
-    "webpack": "^2.0.5-beta"
+    "webpack-hot-middleware": "^2.2.0",
+    "webpack": "^1.9.11"
   }
 }
