--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "dependencies": {
     "bluebird": "^3.1.1",
     "commander": "^2.9.0",
-    "fs-extra": "^0.26.3",
+    "fs-extra": "^0.26.3"
   }
 }
