--- a/template/package.json
+++ b/template/package.json
@@ -4,13 +4,14 @@
   "description": "react start template src file",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "NODE_ENV=test mocha --recursive --compilers js:babel-core/register --require ./test/setup.js",
-    "test:watch": "npm test -- --watch"
+    "test": "",
+    "start": "./node_modules/.bin/babel-node server",
+    "build": "./node_modules/.bin/rimraf ./build && set NODE_ENV=production && webpack --config ./webpack.production.config.js --progress --profile --colors"
   },
   "author": "haochuan",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.4.0",
     "body-parser": "^1.12.4",
     "cors": "^2.7.1",
     "events": "^1.0.2",
@@ -24,16 +25,35 @@
     "redux": "^3.0.6"
   },
   "devDependencies": {
-    "babel-core": "^5.6.18",
-    "babel-loader": "^5.1.4",
-    "babel-plugin-react-transform": "^1.1.0",
-    "expect": "^1.6.0",
+    "autoprefixer": "^6.0.3",
+    "babel-core": "^6.3.26",
+    "babel-eslint": "^4.1.6",
+    "babel-jscs": "^2.0.5",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "chai": "^3.2.0",
+    "css-loader": "^0.19.0",
+    "eslint": "^1.5.0",
+    "eslint-plugin-react": "^3.4.2",
     "express": "^4.13.3",
-    "jsdom": "^5.6.1",
-    "mocha": "^2.2.5",
-    "node-libs-browser": "^0.5.2",
-    "react-addons-test-utils": "^0.14.0",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "html-webpack-plugin": "^1.6.1",
+    "jscs": "^2.1.1",
+    "jsdom": "^6.5.1",
+    "json-loader": "^0.5.3",
+    "mocha": "^2.3.3",
+    "mocha-jsdom": "^1.0.0",
+    "postcss-loader": "^0.6.0",
+    "react-addons-test-utils": "^0.14.3",
     "react-transform-hmr": "^1.0.0",
+    "rimraf": "^2.4.3",
+    "sinon": "^1.16.1",
+    "sinon-chai": "^2.8.0",
+    "stats-webpack-plugin": "^0.2.1",
+    "style-loader": "^0.12.4",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.2.0"
