--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "startreact",
-  "version": "1.0.4",
-  "description": "react start template",
+  "version": "1.1.0",
+  "description": "React + Redux + Hot + Webpack + Express Template Generator",
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
