--- a/template/package.json
+++ b/template/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-start",
-  "version": "1.0.0",
-  "description": "react start template src file",
+  "version": "1.1.0",
+  "description": "React + Redux + Hot + Webpack + Express Template Generator",
   "main": "server.js",
   "scripts": {
     "test": "",
