--- a/template/package.json
+++ b/template/package.json
@@ -11,6 +11,7 @@
   "author": "haochuan",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^6.3.1",
     "babel-cli": "^6.4.0",
     "body-parser": "^1.12.4",
     "cors": "^2.7.1",
@@ -25,6 +26,7 @@
     "redux": "^3.0.6"
   },
   "devDependencies": {
+    "precss": "^1.4.0",
     "autoprefixer": "^6.0.3",
     "babel-core": "^6.3.26",
     "babel-eslint": "^4.1.6",
@@ -46,7 +48,6 @@
     "json-loader": "^0.5.3",
     "mocha": "^2.3.3",
     "mocha-jsdom": "^1.0.0",
-    "postcss-loader": "^0.6.0",
     "react-addons-test-utils": "^0.14.3",
     "react-transform-hmr": "^1.0.0",
     "rimraf": "^2.4.3",
