--- a/template/package.json
+++ b/template/package.json
@@ -11,7 +11,6 @@
   "author": "haochuan",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^6.3.1",
     "babel-cli": "^6.4.0",
     "body-parser": "^1.12.4",
     "cors": "^2.7.1",
@@ -21,13 +20,14 @@
     "keymirror": "^0.1.1",
     "morgan": "^1.6.1",
     "node-basicauth": "0.0.9",
+    "postcss-import": "^8.0.2",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "redux": "^3.0.6"
   },
   "devDependencies": {
-    "precss": "^1.4.0",
-    "autoprefixer": "^6.0.3",
+    "postcss-loader": "^0.8.0",
+    "autoprefixer": "^6.3.1",
     "babel-core": "^6.3.26",
     "babel-eslint": "^4.1.6",
     "babel-jscs": "^2.0.5",
