--- a/template/package.json
+++ b/template/package.json
@@ -20,14 +20,15 @@
     "keymirror": "^0.1.1",
     "morgan": "^1.6.1",
     "node-basicauth": "0.0.9",
-    "postcss-import": "^8.0.2",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "redux": "^3.0.6"
   },
   "devDependencies": {
+    "node-sass": "^3.3.3",
+    "csswring": "^4.0.0",
     "postcss-loader": "^0.8.0",
-    "autoprefixer": "^6.3.1",
+    "autoprefixer-core": "^6.0.1",
     "babel-core": "^6.3.26",
     "babel-eslint": "^4.1.6",
     "babel-jscs": "^2.0.5",
@@ -55,6 +56,7 @@
     "sinon-chai": "^2.8.0",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
+    "sass-loader": "^3.0.0",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.2.0"
