--- a/template/package.json
+++ b/template/package.json
@@ -25,10 +25,11 @@
     "redux": "^3.0.6"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.1",
+    "eslint": "^1.5.0",
     "node-sass": "^3.3.3",
     "csswring": "^4.0.0",
     "postcss-loader": "^0.8.0",
-    "autoprefixer-core": "^6.0.1",
     "babel-core": "^6.3.26",
     "babel-eslint": "^4.1.6",
     "babel-jscs": "^2.0.5",
@@ -39,7 +40,6 @@
     "babel-preset-stage-0": "^6.3.13",
     "chai": "^3.2.0",
     "css-loader": "^0.19.0",
-    "eslint": "^1.5.0",
     "eslint-plugin-react": "^3.4.2",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.8.2",
