--- a/template/package.json
+++ b/template/package.json
@@ -22,7 +22,8 @@
     "node-basicauth": "0.0.9",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "redux": "^3.0.6"
+    "redux": "^3.0.6",
+    "redux-thunk": "^1.0.3"
   },
   "devDependencies": {
     "cross-env": "^1.0.7",
