--- a/template/package.json
+++ b/template/package.json
@@ -23,15 +23,11 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "redux": "^3.0.6",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^1.0.3"
   },
   "devDependencies": {
-    "cross-env": "^1.0.7",
     "autoprefixer": "^6.3.1",
-    "eslint": "^1.5.0",
-    "node-sass": "^3.3.3",
-    "csswring": "^4.0.0",
-    "postcss-loader": "^0.8.0",
     "babel-core": "^6.3.26",
     "babel-eslint": "^4.1.6",
     "babel-jscs": "^2.0.5",
@@ -41,7 +37,10 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "chai": "^3.2.0",
+    "cross-env": "^1.0.7",
     "css-loader": "^0.19.0",
+    "csswring": "^4.0.0",
+    "eslint": "^1.5.0",
     "eslint-plugin-react": "^3.4.2",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.8.2",
@@ -51,14 +50,16 @@
     "json-loader": "^0.5.3",
     "mocha": "^2.3.3",
     "mocha-jsdom": "^1.0.0",
+    "node-sass": "^3.3.3",
+    "postcss-loader": "^0.8.0",
     "react-addons-test-utils": "^0.14.3",
     "react-transform-hmr": "^1.0.0",
     "rimraf": "^2.4.3",
+    "sass-loader": "^3.0.0",
     "sinon": "^1.16.1",
     "sinon-chai": "^2.8.0",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
-    "sass-loader": "^3.0.0",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.2.0"
