pass state to props

--- a/template/package.json
+++ b/template/package.json
@@ -22,6 +22,7 @@
     "node-basicauth": "0.0.9",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-redux": "^4.4.1",
     "redux": "^3.0.6",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^1.0.3"
