--- a/template/package.json
+++ b/template/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-start",
-  "version": "1.1.2",
-  "description": "React + Redux + Hot + Webpack + Express Template Generator",
+  "version": "1.2.0",
+  "description": "React + Redux + Hot + Webpack + Express Template",
   "main": "server.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register --require ./src/test/**/*.js",
