--- a/template/package.json
+++ b/template/package.json
@@ -23,6 +23,7 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.4.1",
+    "react-router": "^2.2.4",
     "redux": "^3.0.6",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^1.0.3"
