--- a/template/package.json
+++ b/template/package.json
@@ -14,9 +14,11 @@
     "babel-cli": "^6.4.0",
     "body-parser": "^1.12.4",
     "cors": "^2.7.1",
+    "es6-promise": "^3.1.2",
     "events": "^1.0.2",
     "express": "^4.12.3",
     "express-http-proxy": "^0.6.0",
+    "isomorphic-fetch": "^2.2.1",
     "keymirror": "^0.1.1",
     "morgan": "^1.6.1",
     "node-basicauth": "0.0.9",
