--- a/template/package.json
+++ b/template/package.json
@@ -15,6 +15,7 @@
     "babel-cli": "^6.4.5",
     "body-parser": "^1.14.2",
     "cors": "^2.7.1",
+    "enzyme": "^2.3.0",
     "es6-promise": "^3.1.2",
     "events": "^1.0.2",
     "express": "^4.12.3",
@@ -29,7 +30,8 @@
     "react-router": "^2.2.4",
     "redux": "^3.0.6",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^1.0.3"
+    "redux-thunk": "^1.0.3",
+    "tape": "^4.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
@@ -40,7 +42,6 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "chai": "^3.2.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.19.0",
     "csswring": "^4.2.1",
@@ -51,16 +52,11 @@
     "jscs": "^2.9.0",
     "jsdom": "^6.5.1",
     "json-loader": "^0.5.3",
-    "mocha": "^2.4.4",
-    "mocha-jsdom": "^1.0.0",
     "node-sass": "^3.4.2",
     "postcss-loader": "^0.8.0",
-    "react-addons-test-utils": "^0.14.6",
     "react-transform-hmr": "^1.0.1",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.1.2",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
     "stats-webpack-plugin": "^0.2.2",
     "style-loader": "^0.12.4",
     "webpack": "^1.12.12",
