--- a/template/package.json
+++ b/template/package.json
@@ -4,7 +4,7 @@
   "description": "React + Redux + Hot + Webpack + Express Template",
   "main": "server.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register --require ./src/test/**/*.js",
+    "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register",
     "dev": "./node_modules/.bin/babel-node server",
     "production": "NODE_ENV=production ./node_modules/.bin/babel-node server",
     "build": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors"
@@ -13,15 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.4.5",
+    "babel-register": "^6.9.0",
     "body-parser": "^1.14.2",
     "cors": "^2.7.1",
     "enzyme": "^2.3.0",
     "es6-promise": "^3.1.2",
     "events": "^1.0.2",
+    "expect": "^1.20.1",
     "express": "^4.12.3",
     "express-http-proxy": "^0.6.0",
     "isomorphic-fetch": "^2.2.1",
     "keymirror": "^0.1.1",
+    "mocha": "^2.5.3",
     "morgan": "^1.6.1",
     "node-basicauth": "0.0.9",
     "react": "^0.14.6",
@@ -30,8 +33,7 @@
     "react-router": "^2.2.4",
     "redux": "^3.0.6",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^1.0.3",
-    "tape": "^4.5.1"
+    "redux-thunk": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
