--- a/template/package.json
+++ b/template/package.json
@@ -19,6 +19,7 @@
     "enzyme": "^2.3.0",
     "es6-promise": "^3.1.2",
     "events": "^1.0.2",
+    "expect": "^1.20.1",
     "express": "^4.12.3",
     "express-http-proxy": "^0.6.0",
     "isomorphic-fetch": "^2.2.1",
