--- a/template/package.json
+++ b/template/package.json
@@ -24,12 +24,13 @@
     "express-http-proxy": "^0.6.0",
     "isomorphic-fetch": "^2.2.1",
     "keymirror": "^0.1.1",
+    "lodash": "^4.13.1",
     "morgan": "^1.6.1",
     "node-basicauth": "0.0.9",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.4.1",
-    "react-router": "^2.2.4",
+    "react-router": "^2.4.1",
     "redux": "^3.0.6",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^1.0.3",
