--- a/template/package.json
+++ b/template/package.json
@@ -38,6 +38,7 @@
     "tape": "^4.5.1"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^3.0.1",
     "autoprefixer": "^6.3.1",
     "babel-eslint": "^4.1.6",
     "babel-jscs": "^2.0.5",
