--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-start",
-  "version": "1.2.0",
+  "name": "redact-template",
+  "version": "1.0.0",
   "description": "React + Redux + Hot + Webpack + Express Template",
   "main": "server.js",
   "scripts": {
