--- a/template/package.json
+++ b/template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redact-template",
+  "name": "reactux-template",
   "version": "1.0.0",
   "description": "React + Redux + Hot + Webpack + Express Template",
   "main": "server.js",
