--- a/template/package.json
+++ b/template/package.json
@@ -12,60 +12,59 @@
   "author": "haochuan",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.4.5",
-    "babel-register": "^6.9.0",
-    "body-parser": "^1.14.2",
-    "cors": "^2.7.1",
-    "enzyme": "^2.3.0",
-    "es6-promise": "^3.1.2",
-    "events": "^1.0.2",
-    "expect": "^1.20.1",
-    "express": "^4.12.3",
-    "express-http-proxy": "^0.6.0",
-    "isomorphic-fetch": "^2.2.1",
-    "keymirror": "^0.1.1",
-    "lodash": "^4.13.1",
-    "morgan": "^1.6.1",
-    "node-basicauth": "0.0.9",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "react-redux": "^4.4.1",
-    "react-router": "^2.4.1",
-    "redux": "^3.0.6",
-    "redux-logger": "^2.6.1",
-    "redux-thunk": "^1.0.3",
+    "babel-cli": "*",
+    "babel-register": "*",
+    "body-parser": "*",
+    "cors": "*",
+    "enzyme": "*",
+    "es6-promise": "*",
+    "events": "*",
+    "express": "*",
+    "express-http-proxy": "^0.7.2",
+    "isomorphic-fetch": "*",
+    "keymirror": "*",
+    "lodash": "*",
+    "morgan": "*",
+    "node-basicauth": "*",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "*",
+    "react-router": "*",
+    "redux": "*",
+    "redux-logger": "*",
+    "redux-thunk": "^2.1.0",
     "tap-spec": "^4.1.1",
-    "tape": "^4.5.1"
+    "tape": "^4.6.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^3.0.1",
-    "autoprefixer": "^6.3.1",
-    "babel-eslint": "^4.1.6",
-    "babel-jscs": "^2.0.5",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "cross-env": "^1.0.7",
-    "css-loader": "^0.19.0",
-    "csswring": "^4.2.1",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.16.1",
-    "extract-text-webpack-plugin": "^0.8.2",
-    "html-webpack-plugin": "^1.7.0",
-    "jscs": "^2.9.0",
-    "jsdom": "^6.5.1",
-    "json-loader": "^0.5.3",
-    "node-sass": "^3.4.2",
-    "postcss-loader": "^0.8.0",
-    "react-transform-hmr": "^1.0.1",
-    "rimraf": "^2.5.1",
-    "sass-loader": "^3.1.2",
-    "stats-webpack-plugin": "^0.2.2",
-    "style-loader": "^0.12.4",
-    "webpack": "^1.12.12",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.6.4"
+    "copy-webpack-plugin": "*",
+    "autoprefixer": "*",
+    "babel-eslint": "*",
+    "babel-jscs": "*",
+    "babel-loader": "*",
+    "babel-plugin-react-transform": "*",
+    "babel-preset-es2015": "*",
+    "babel-preset-react": "*",
+    "babel-preset-stage-0": "*",
+    "cross-env": "*",
+    "css-loader": "*",
+    "csswring": "*",
+    "eslint": "*",
+    "eslint-plugin-react": "*",
+    "extract-text-webpack-plugin": "*",
+    "html-webpack-plugin": "*",
+    "jscs": "*",
+    "jsdom": "*",
+    "json-loader": "*",
+    "node-sass": "*",
+    "postcss-loader": "*",
+    "react-transform-hmr": "*",
+    "rimraf": "*",
+    "sass-loader": "*",
+    "stats-webpack-plugin": "*",
+    "style-loader": "*",
+    "webpack": "*",
+    "webpack-dev-middleware": "*",
+    "webpack-hot-middleware": "*"
   }
 }
