--- a/template/package.json
+++ b/template/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test tape -r babel-register ./src/**/*spec.js | tap-spec",
+    "lint": "eslint ./src/actions/*.js",
     "dev": "./node_modules/.bin/babel-node server",
     "production": "NODE_ENV=production node prod",
     "build": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors"
@@ -24,20 +25,8 @@
     "node-basicauth": "*"
   },
   "devDependencies": {
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-redux": "*",
-    "react-router": "*",
-    "redux": "*",
-    "redux-logger": "*",
-    "redux-thunk": "^2.1.0",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.6.0",
-    "enzyme": "*",
-    "babel-cli": "*",
-    "babel-register": "*",
-    "copy-webpack-plugin": "*",
     "autoprefixer": "*",
+    "babel-cli": "*",
     "babel-eslint": "*",
     "babel-jscs": "*",
     "babel-loader": "*",
@@ -45,11 +34,17 @@
     "babel-preset-es2015": "*",
     "babel-preset-react": "*",
     "babel-preset-stage-0": "*",
+    "babel-register": "*",
+    "copy-webpack-plugin": "*",
     "cross-env": "*",
     "css-loader": "*",
     "csswring": "*",
-    "eslint": "*",
-    "eslint-plugin-react": "*",
+    "enzyme": "*",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.11.1",
+    "eslint-plugin-jsx-a11y": "^1.5.5",
+    "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "*",
     "html-webpack-plugin": "*",
     "jscs": "*",
@@ -57,11 +52,20 @@
     "json-loader": "*",
     "node-sass": "*",
     "postcss-loader": "*",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "*",
+    "react-router": "*",
     "react-transform-hmr": "*",
+    "redux": "*",
+    "redux-logger": "*",
+    "redux-thunk": "^2.1.0",
     "rimraf": "*",
     "sass-loader": "*",
     "stats-webpack-plugin": "*",
     "style-loader": "*",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.0",
     "webpack": "*",
     "webpack-dev-middleware": "*",
     "webpack-hot-middleware": "*"
