--- a/template/package.json
+++ b/template/package.json
@@ -13,61 +13,60 @@
   "author": "haochuan",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "*",
-    "cors": "*",
-    "es6-promise": "*",
-    "events": "*",
-    "express": "*",
-    "express-http-proxy": "^0.7.2",
-    "isomorphic-fetch": "*",
-    "lodash": "*",
-    "morgan": "*",
-    "node-basicauth": "*"
+    "body-parser": "^1.15.2",
+    "cors": "^2.7.1",
+    "es6-promise": "^3.2.1",
+    "express": "^4.14.0",
+    "express-http-proxy": "^0.7.4",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.13.1",
+    "morgan": "^1.7.0",
+    "node-basicauth": "0.0.9"
   },
   "devDependencies": {
-    "autoprefixer": "*",
-    "babel-cli": "*",
-    "babel-eslint": "*",
-    "babel-jscs": "*",
-    "babel-loader": "*",
-    "babel-plugin-react-transform": "*",
-    "babel-preset-es2015": "*",
-    "babel-preset-react": "*",
-    "babel-preset-stage-0": "*",
-    "babel-register": "*",
-    "copy-webpack-plugin": "*",
-    "cross-env": "*",
-    "css-loader": "*",
-    "csswring": "*",
-    "enzyme": "*",
+    "autoprefixer": "^6.3.7",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
+    "babel-jscs": "^2.0.5",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.11.5",
+    "copy-webpack-plugin": "^3.0.1",
+    "cross-env": "^2.0.0",
+    "css-loader": "^0.23.1",
+    "csswring": "^5.1.0",
+    "enzyme": "^2.4.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.11.1",
     "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.2",
-    "extract-text-webpack-plugin": "*",
-    "html-webpack-plugin": "*",
-    "jscs": "*",
-    "jsdom": "*",
-    "json-loader": "*",
-    "node-sass": "*",
-    "postcss-loader": "*",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-redux": "*",
-    "react-router": "*",
-    "react-transform-hmr": "*",
-    "redux": "*",
-    "redux-logger": "*",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.22.0",
+    "jscs": "^3.0.7",
+    "json-loader": "^0.5.4",
+    "node-sass": "^3.8.0",
+    "postcss-loader": "^0.9.1",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.0",
+    "react-transform-hmr": "^1.0.4",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
-    "rimraf": "*",
-    "sass-loader": "*",
-    "stats-webpack-plugin": "*",
-    "style-loader": "*",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.0",
+    "stats-webpack-plugin": "^0.4.0",
+    "style-loader": "^0.13.1",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
-    "webpack": "*",
-    "webpack-dev-middleware": "*",
-    "webpack-hot-middleware": "*"
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.1"
   }
 }
