--- a/template/package.json
+++ b/template/package.json
@@ -21,7 +21,8 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.13.1",
     "morgan": "^1.7.0",
-    "node-basicauth": "0.0.9"
+    "node-basicauth": "0.0.9",
+    "normalizr": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
