--- a/template/package.json
+++ b/template/package.json
@@ -52,6 +52,7 @@
     "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
+    "precss": "^1.4.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
