--- a/template/package.json
+++ b/template/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test tape -r babel-register ./src/**/*spec.js | tap-spec",
-    "lint": "eslint ./src/actions/*.js",
+    "lint": "./node_modules/.bin/eslint ./src/**/*.js",
     "dev": "./node_modules/.bin/babel-node server",
     "production": "NODE_ENV=production node prod",
     "build": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors"
@@ -35,17 +35,16 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.11.5",
+    "babel-register": "^6.11.6",
     "copy-webpack-plugin": "^3.0.1",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
-    "csswring": "^5.1.0",
     "enzyme": "^2.4.1",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.11.1",
-    "eslint-plugin-jsx-a11y": "^1.5.5",
-    "eslint-plugin-react": "^5.2.2",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "*",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
     "jscs": "^3.0.7",
@@ -53,10 +52,10 @@
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
-    "react-router": "^2.6.0",
+    "react-router": "^2.6.1",
     "react-transform-hmr": "^1.0.4",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
@@ -69,6 +68,6 @@
     "tape": "^4.6.0",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.1"
+    "webpack-hot-middleware": "^2.12.2"
   }
 }
