--- a/template/package.json
+++ b/template/package.json
@@ -4,11 +4,19 @@
   "description": "React + Redux + Hot + Webpack + Express Template",
   "main": "server.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test tape -r babel-register ./src/**/*spec.js | tap-spec",
+    "test": "cross-env NODE_ENV=test NODE_PATH=src ava --verbose",
     "lint": "./node_modules/.bin/eslint ./src/**/*.js",
     "dev": "./node_modules/.bin/babel-node server",
     "production": "NODE_ENV=production node prod",
     "build": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors"
+  },
+  "ava": {
+    "babel": "inherit",
+    "require": [
+      "babel-register",
+      "ignore-styles",
+      "./test/helpers/setup.js"
+    ]
   },
   "author": "haochuan",
   "license": "ISC",
@@ -26,6 +34,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
+    "ava": "^0.15.2",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.11.4",
     "babel-eslint": "^6.1.2",
@@ -47,12 +56,14 @@
     "eslint-plugin-react": "^6.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
+    "ignore-styles": "^4.0.0",
     "jscs": "^3.0.7",
     "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
     "react": "^15.3.0",
+    "react-addons-test-utils": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
@@ -62,10 +73,9 @@
     "redux-thunk": "^2.1.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
+    "sinon": "^1.17.5",
     "stats-webpack-plugin": "^0.4.0",
     "style-loader": "^0.13.1",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.6.0",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
