add lint in loader, fix lint, fix test

--- a/template/package.json
+++ b/template/package.json
@@ -51,6 +51,7 @@
     "enzyme": "^2.4.1",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
+    "eslint-loader": "^1.5.0",
     "eslint-plugin-import": "*",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
