--- a/template/.eslintrc
+++ b/template/.eslintrc
@@ -1,10 +1,15 @@
 {
     "extends": "airbnb",
+    "env": {
+      "browser": true,
+      "node": true
+    },
     "plugins": [
         "react"
     ],
     "rules": {
       "max-len": [1, 120, 2, {ignoreComments: true}],
+      "no-multiple-empty-lines": [2, {"max": 2, "maxEOF": 2}],
       "comma-dangle": ["off", "always"],
       "no-unused-vars": ["off", { "vars": "all", "args": "after-used" }],
       "import/no-extraneous-dependencies": ["off", {"devDependencies": false, "optionalDependencies": false, "peerDependencies": false}],
