--- a/template/package.json
+++ b/template/package.json
@@ -27,7 +27,7 @@
     "express": "^4.14.0",
     "express-http-proxy": "^0.7.4",
     "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.13.1",
+    "lodash": "^4.14.1",
     "morgan": "^1.7.0",
     "node-basicauth": "0.0.9",
     "normalizr": "^2.2.1",
@@ -53,7 +53,7 @@
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-loader": "^1.5.0",
-    "eslint-plugin-import": "*",
+    "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
