--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
     "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.23.1",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-loader": "^1.5.0",
@@ -26,7 +27,9 @@
     "eslint-plugin-react": "^6.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
+    "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
   }
 }
