--- a/template/package.json
+++ b/template/package.json
@@ -4,23 +4,25 @@
   "description": "React + Redux + Hot + Webpack + Express Template",
   "main": "server.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test NODE_PATH=src ava --verbose",
+    "test": "jest --verbose",
+    "test:watch": "npm test -- --watch",
     "lint": "./node_modules/.bin/eslint ./src/**/*.js",
     "dev": "./node_modules/.bin/babel-node server",
     "production": "NODE_ENV=production node prod",
     "build": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors"
   },
-  "ava": {
-    "babel": "inherit",
-    "require": [
-      "babel-register",
-      "ignore-styles",
-      "./test/helpers/setup.js"
-    ]
-  },
   "author": "haochuan",
   "license": "ISC",
+  "jest": {
+    "scriptPreprocessor": "./node_modules/jest-css-modules"
+  },
   "dependencies": {
+    "autoprefixer": "^6.4.1",
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-register": "^6.14.0",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
@@ -36,7 +38,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
-    "ava": "^0.15.2",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.11.4",
     "babel-eslint": "^6.1.2",
@@ -60,6 +61,8 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
     "ignore-styles": "^4.0.0",
+    "jest": "^16.0.0",
+    "jest-css-modules": "^1.0.2",
     "jscs": "^3.0.7",
     "jsdom": "^9.4.2",
     "json-loader": "^0.5.4",
@@ -77,7 +80,6 @@
     "redux-thunk": "^2.1.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
-    "sinon": "^1.17.5",
     "stats-webpack-plugin": "^0.4.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
