--- a/template/package.json
+++ b/template/package.json
@@ -11,11 +11,14 @@
     "production": "NODE_ENV=production node prod",
     "build": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors"
   },
+  "jest": {
+    "moduleNameMapper": {
+       "^.+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "^.+\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
+  },
   "author": "haochuan",
   "license": "ISC",
-  "jest": {
-    "scriptPreprocessor": "./node_modules/jest-css-modules"
-  },
   "dependencies": {
     "autoprefixer": "^6.4.1",
     "babel-cli": "^6.14.0",
@@ -41,6 +44,7 @@
     "babel-cli": "^6.11.4",
     "babel-core": "^6.11.4",
     "babel-eslint": "^6.1.2",
+    "babel-jest": "^16.0.0",
     "babel-jscs": "^2.0.5",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
@@ -62,7 +66,6 @@
     "html-webpack-plugin": "^2.22.0",
     "ignore-styles": "^4.0.0",
     "jest": "^16.0.0",
-    "jest-css-modules": "^1.0.2",
     "jscs": "^3.0.7",
     "jsdom": "^9.4.2",
     "json-loader": "^0.5.4",
