--- a/template/package.json
+++ b/template/package.json
@@ -1,20 +1,20 @@
 {
   "name": "reactux-template",
-  "version": "2.5.0",
+  "version": "3.0.0",
   "description": "React + Redux + Hot + Webpack + Express Template",
   "main": "server.js",
   "scripts": {
     "test": "jest --verbose",
     "test:watch": "npm test -- --watch",
-    "lint": "./node_modules/.bin/eslint ./src/**/*.js",
-    "dev": "./node_modules/.bin/babel-node server",
-    "dev-dashboard": "webpack-dashboard -- ./node_modules/.bin/babel-node server",
-    "production": "NODE_ENV=production node prod",
-    "build": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors"
+    "lint": "./node_modules/.bin/eslint ./frontend/src/**/*.js",
+    "dev": "nodemon backend/server.js --exec babel-node --presets es2015,stage-2 --ignore frontend/",
+    "build-react": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
+    "clean": "rm -rf dist",
+    "deploy": "npm run clean && npm run build-react && mkdir -p dist && babel backend -s -D -d dist --presets es2015,stage-2 && pm2 start server.json"
   },
   "jest": {
     "moduleNameMapper": {
-       "^.+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "^.+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "^.+\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     }
   },
@@ -31,16 +31,11 @@
     "lodash": "^4.14.1",
     "morgan": "^1.7.0",
     "node-basicauth": "0.0.9",
+    "nodemon": "^1.11.0",
     "normalizr": "^2.2.1",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.1",
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-register": "^6.14.0",
     "autoprefixer": "^6.3.7",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.11.4",
@@ -87,7 +82,6 @@
     "stats-webpack-plugin": "^0.4.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
-    "webpack-dashboard": "^0.2.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
   }
