--- a/template/package.json
+++ b/template/package.json
@@ -1,16 +1,21 @@
 {
   "name": "reactux-template",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "React + Redux + Hot + Webpack + Express Template",
   "main": "server.js",
   "scripts": {
-    "test": "jest --verbose",
-    "test:watch": "npm test -- --watch",
-    "lint": "./node_modules/.bin/eslint ./frontend/src/**/*.js",
+    "test-frontend": "jest --verbose --testPathPattern __test__frontend",
+    "test-frontend:watch": "npm test-frontend -- --watch",
+    "test-backend": "jest --verbose --testPathPattern __test__backend",
+    "test-backend:watch": "npm test-backend -- --watch",
+    "lint-frontend": "./node_modules/.bin/eslint ./frontend/src/**/*.js",
+    "lint-backend": "./node_modules/.bin/eslint ./backend/**/*.js",
     "dev": "nodemon backend/server.js --exec babel-node --presets es2015,stage-2 --ignore frontend/",
     "build-react": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
+    "build-server": "npm run clean && mkdir -p dist && babel backend -s -D -d dist --presets es2015,stage-2",
+    "build-all": "npm run clean && npm run build-react && npm run build-server",
     "clean": "rm -rf dist",
-    "deploy": "npm run clean && npm run build-react && mkdir -p dist && babel backend -s -D -d dist --presets es2015,stage-2 && pm2 start server.json"
+    "deploy": "npm run build-all && pm2 start server.json"
   },
   "jest": {
     "moduleNameMapper": {
