--- a/template/package.json
+++ b/template/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "test-frontend": "jest --verbose --testPathPattern __test__frontend",
     "test-frontend:watch": "npm test-frontend -- --watch",
-    "test-backend": "jest --verbose --testPathPattern __test__backend",
-    "test-backend:watch": "npm test-backend -- --watch",
+    "test-backend": "NODE_ENV=test mocha --compilers js:babel-register",
     "lint-frontend": "./node_modules/.bin/eslint ./frontend/src/**/*.js",
-    "lint-backend": "./node_modules/.bin/eslint ./backend/**/*.js",
-    "dev": "nodemon backend/server.js --exec babel-node --presets es2015,stage-2 --ignore frontend/",
+    "lint-backend": "./node_modules/.bin/eslint server.js config/** middlewre/** models/** routes/**",
+    "dev": "nodemon bin/www --exec babel-node --presets es2015,stage-2 --ignore frontend/",
     "build-react": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
     "build-server": "npm run clean && mkdir -p dist && babel backend -s -D -d dist --presets es2015,stage-2",
     "build-all": "npm run clean && npm run build-react && npm run build-server",
