npm run: dev, test-backend

--- a/template/package.json
+++ b/template/package.json
@@ -8,8 +8,8 @@
     "test-frontend:watch": "npm test-frontend -- --watch",
     "test-backend": "NODE_ENV=test mocha --compilers js:babel-register",
     "lint-frontend": "./node_modules/.bin/eslint ./frontend/src/**/*.js",
-    "lint-backend": "./node_modules/.bin/eslint server.js config/** middlewre/** models/** routes/**",
-    "dev": "nodemon bin/www --exec babel-node --presets es2015,stage-2 --ignore frontend/",
+    "lint-backend": "./node_modules/.bin/eslint ./backend/src/**/*.js",
+    "dev": "NODE_ENV=dev nodemon bin/www-dev --exec babel-node --presets es2015 --ignore frontend/",
     "build-react": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
     "build-server": "npm run clean && mkdir -p dist && babel backend -s -D -d dist --presets es2015,stage-2",
     "build-all": "npm run clean && npm run build-react && npm run build-server",
@@ -52,6 +52,8 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.11.6",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "copy-webpack-plugin": "^3.0.1",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
@@ -69,6 +71,7 @@
     "jscs": "^3.0.7",
     "jsdom": "^9.4.2",
     "json-loader": "^0.5.4",
+    "mocha": "^3.2.0",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
