--- a/template/package.json
+++ b/template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactux-template",
+  "name": "reactux-frontend",
   "version": "3.1.0",
   "description": "React + Redux + Hot + Webpack + Express Template",
   "main": "server.js",
