--- a/template/frontend/package.json
+++ b/template/frontend/package.json
@@ -29,6 +29,7 @@
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
+    "antd": "^2.8.0",
     "autoprefixer": "^6.3.7",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.11.4",
@@ -36,6 +37,7 @@
     "babel-jest": "^16.0.0",
     "babel-jscs": "^2.0.5",
     "babel-loader": "^6.2.4",
+    "babel-plugin-import": "^1.1.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
